# hackaton_app

./: .gitignore  detection.py
backend/: Dockerfile  backend.py  pyproject.toml
frontend/: Dockerfile  frontend.py  pyproject.toml
