[project]
name = "obj-det"
version = "0.1.0"
description = "Deploy Object Detection on GCP"
authors = [
    {name = "Matteo Tarenzi"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
